

gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for symbols

Most recent changes (version wise) are at the top of this file 
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-02-20  Ales Hvezda  <ahvezda@geda.seul.org>

	* local/ micro/: Added a four symbols created by Marcus Isaksson

	* */*.sym: Loaded and saved all symbols in gschem to get the new 
	  version and file format (text alignment change) 

	* analog/*.sym: Added pin#= attributes to a few of the symbols
	  Added missing device= attributes as well

2000-02-19  Ales Hvezda  <ahvezda@geda.seul.org>

        * README/INSTALL: Updated files to reflect next release

2000-02-08  Ales Hvezda  <ahvezda@geda.seul.org>

	* */*.sym: Removed all spaces from all device= attributes.  This is
	  to make the pcb netlister(s) happy.

2000-02-07  Ales Hvezda  <ahvezda@geda.seul.org>

	* misc/include-1.sym: Added symbol by Bas for use with gnetlist spice
	  backend. See for more info: 
	  http://www.geda.seul.org/mailinglist/geda-dev25/msg00113.html

	* analog/diode-2.sym and local/lt1108-1.sym: Symbols added by Arnim

2000-01-25  Ales Hvezda  <ahvezda@geda.seul.org>

	* config.h: Remove this file from the cvs repository; should not have
	  been there in the first place.

2000-01-18  Ales Hvezda  <ahvezda@geda.seul.org>

	* analog/opamp-2.sym: Added a slightly larger version of opamp-1.sym

1999-11-07  Ales Hvezda  <ahvezda@geda.seul.org>

	* local/ULN2003-1.sym: Fixed the wrong text colors (text colors should
	  be color 9)

	* local/*phase-stepper*.sym: Added some more symbols created by me.

	* connector/DB25-2.sym: Added an alternate version of the 25 pin
	  parallel port connector (modified by me :-)

1999-11-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* Bunch: Integrated a bunch of symbols by Arnim

	* local/ULN2003-1.sym: Added a symbol created by me. :)
