@@ -1,0 +1,41 @@
+v 20000220
+L 300 200 300 800 3
+T 300 0 9 8 1 0 0 0
+4093
+L 300 800 700 800 3
+L 300 200 700 200 3
+A 700 500 300 -90 180 3
+V 1050 500 50 6
+P 1100 500 1300 500 1
+{
+T 1135 550 5 8 1 1 0 0
+pin3=3
+}
+P 300 300 0 300 1
+{
+T 200 350 5 8 1 1 0 6
+pin2=2
+}
+P 300 700 0 700 1
+{
+T 200 750 5 8 1 1 0 6
+pin1=1
+}
+T 300 900 5 10 0 0 0 0
+device=4093
+T 300 1100 5 10 0 0 0 0
+slot=1
+T 300 1300 5 10 0 0 0 0
+numslots=4
+T 300 1500 5 10 0 0 0 0
+slot1=1,2,3
+T 300 1700 5 10 0 0 0 0
+slot2=5,6,4
+T 300 1900 5 10 0 0 0 0
+slot3=8,9,10
+T 300 2100 5 10 0 0 0 0
+slot4=12,13,11
+L 400 350 600 350 3
+L 600 350 700 650 3
+L 500 350 600 650 3
+L 600 650 800 650 3
