@@ -351,6 +351,19 @@ Marcus Isaksson		- For contribute the following gmk_sym generated
 
 			  (Ales had to move them to the origin)
 
+JM Routoure 		- For contributing the following symbols:
+
+				4093-1.sym 4N25-1.sym 
+			
+			  These not integrated yet:	
+
+				AD633JN-1.sym AD633JR-1.sym aop-spice-1.sym 
+				aop-std-1.sym zener-2.sym
+
+Luke Stras		- For contribute the following symbols:
+
+				DS26C61-1.sym max3491-1.sym	
+
 
 Also thanks go to all the people on the geda-dev mailing list.  Many of
 the subscribers provided good suggestions which are greatly appreciated
