@@ -1,0 +1,61 @@
+v 20000220
+L 300 1200 700 1200 3
+L 700 1200 700 900 3
+L 900 700 500 700 3
+L 700 700 900 900 3
+L 900 900 500 900 3
+L 500 900 700 700 3
+L 700 700 700 300 3
+L 700 300 300 300 3
+L 1800 1200 1700 1200 3
+L 1700 1200 1700 1000 3
+L 1400 1000 1400 600 3
+L 1700 1000 1400 900 3
+L 1400 700 1700 600 3
+L 1700 600 1700 300 3
+L 1700 300 1800 300 3
+L 1700 600 1600 700 3
+L 1700 600 1500 600 3
+L 941 790 1146 865 3
+L 1146 865 1114 809 3
+L 1114 809 1351 893 3
+L 941 716 1146 791 3
+L 1146 791 1114 735 3
+L 1114 735 1351 819 3
+P 300 1200 0 1200 1
+{
+T 200 1250 5 8 1 1 0 6
+pin1=1
+}
+P 300 300 0 300 1
+{
+T 200 350 5 8 1 1 0 6
+pin2=2
+}
+P 1800 1200 2100 1200 1
+{
+T 1900 1250 5 8 1 1 0 0
+pin5=5
+}
+P 1800 300 2100 300 1
+{
+T 1900 350 5 8 1 1 0 0
+pin4=4
+}
+T 900 2000 5 10 0 0 0 0
+device=4N25
+L 1349 891 1264 885 3
+L 1347 891 1282 850 3
+L 1349 818 1271 814 3
+L 1347 818 1285 775 3
+T 300 1750 9 10 1 0 0 0
+4N25
+P 1800 1600 2100 1600 1
+{
+T 1900 1650 5 8 1 1 0 0
+pin6=6
+}
+B 300 0 1500 1700 3
+L 1800 1600 1300 1600 3
+L 1300 1600 1300 800 3
+L 1300 800 1400 800 3
