@@ -1,0 +1,93 @@
+v 20000220
+L 600 1600 600 1200 3
+L 600 1200 900 1400 3
+L 900 1400 600 1600 3
+L 900 1000 900 600 3
+L 900 600 600 800 3
+L 600 800 900 1000 3
+V 800 1300 25 3
+V 700 700 25 3
+V 925 700 25 3
+L 600 1400 400 1400 3
+L 825 1500 1100 1500 3
+L 950 700 1100 700 3
+L 900 900 1100 900 3
+L 700 675 700 500 3
+L 700 1525 700 1700 3
+L 600 800 400 800 3
+P 300 1400 0 1400 1
+{
+T 250 1450 5 8 1 1 0 6
+pin5=5
+T 350 1450 9 10 1 1 0 0
+pinlabel=DI
+}
+P 300 800 0 800 1
+{
+T 250 850 5 8 1 1 0 6
+pin2=2
+T 350 850 9 10 1 1 0 0
+pinlabel=RO
+}
+P 1200 1600 1500 1600 1
+{
+T 1300 1650 5 8 1 1 0 0
+pin9=9
+T 1050 1550 9 10 1 1 0 6
+pinlabel=Y
+}
+P 1200 1200 1500 1200 1
+{
+T 1300 1250 5 8 1 1 0 0
+pin10=10
+T 1050 1150 9 10 1 1 0 6
+pinlabel=Z
+}
+P 1200 1000 1500 1000 1
+{
+T 1300 850 5 8 1 1 0 0
+pin12=12
+T 1050 950 9 10 1 1 0 6
+pinlabel=A
+}
+P 1200 600 1500 600 1
+{
+T 1300 650 5 8 1 1 0 0
+pin11=11
+T 1050 500 9 10 1 1 0 6
+pinlabel=B
+}
+P 700 300 700 0 1
+{
+T 650 100 5 8 1 1 0 6
+pin3=3
+T 350 350 9 10 1 1 0 0
+pinlabel=/RE
+}
+P 700 1900 700 2200 1
+{
+T 650 2000 5 8 1 1 0 6
+pin4=4
+T 450 1750 9 10 1 1 0 0
+pinlabel=DE
+}
+B 300 300 900 1600 3
+L 1100 1500 1100 1600 3
+L 1100 1600 1200 1600 3
+L 1100 1300 1100 1200 3
+L 1100 1200 1200 1200 3
+L 1100 900 1100 1000 3
+L 1100 1000 1200 1000 3
+L 1100 700 1100 600 3
+L 1100 600 1200 600 3
+L 700 1700 700 1900 3
+L 700 500 700 300 3
+L 400 1400 300 1400 3
+L 400 800 300 800 3
+L 850 1300 1100 1300 3
+L 850 1300 825 1300 3
+L 825 1500 750 1500 3
+T 1300 2200 5 10 0 0 0 0
+device=MAX3491
+T 800 1950 9 10 1 0 0 0
+MAX3491
