@@ -1,0 +1,109 @@
+v 20000220
+B 300 0 1700 3400 3
+P 2000 3100 2300 3100 1
+{
+T 2150 3150 5 8 1 1 0 0
+pin2=2
+T 1850 3100 9 10 1 1 0 6
+pinlabel=OUT A
+}
+P 2000 2300 2300 2300 1
+{
+T 2150 2350 5 8 1 1 0 0
+pin6=6
+T 1850 2300 9 10 1 1 0 6
+pinlabel=OUT B
+}
+P 2000 1500 2300 1500 1
+{
+T 2150 1550 5 8 1 1 0 0
+pin10=10
+T 1850 1500 9 10 1 1 0 6
+pinlabel=OUT C
+}
+P 2000 700 2300 700 1
+{
+T 2150 750 5 8 1 1 0 0
+pin14=14
+T 1850 700 9 10 1 1 0 6
+pinlabel=OUT D
+}
+V 2050 2700 50 6
+P 2100 2700 2300 2700 1
+{
+T 2150 2750 5 8 1 1 0 0
+pin3=3
+T 1850 2700 9 10 1 1 0 6
+pinlabel=/OUT A
+}
+V 2050 1900 50 6
+V 2050 1100 50 6
+V 2050 300 50 6
+P 2100 1900 2300 1900 1
+{
+T 2150 1950 5 8 1 1 0 0
+pin5=5
+T 1850 1900 9 10 1 1 0 6
+pinlabel=/OUT B
+}
+P 2100 300 2300 300 1
+{
+T 2150 350 5 8 1 1 0 0
+pin13=13
+T 1850 300 9 10 1 1 0 6
+pinlabel=/OUT D
+}
+P 300 3100 0 3100 1
+{
+T 200 3150 5 8 1 1 0 6
+pin1=1
+T 400 3100 9 10 1 1 0 0
+pinlabel=IN A
+}
+P 300 2700 0 2700 1
+{
+T 200 2750 5 8 1 1 0 6
+pin7=7
+T 400 2700 9 10 1 1 0 0
+pinlabel=IN B
+}
+P 300 2300 0 2300 1
+{
+T 200 2350 5 8 1 1 0 6
+pin9=9
+T 400 2300 9 10 1 1 0 0
+pinlabel=IN C
+}
+P 300 1900 0 1900 1
+{
+T 200 1950 5 8 1 1 0 6
+pin15=15
+T 400 1900 9 10 1 1 0 0
+pinlabel=IN D
+}
+P 300 1500 0 1500 1
+{
+T 200 1550 5 8 1 1 0 6
+pin4=4
+T 400 1500 9 10 1 1 0 0
+pinlabel=ENB
+}
+V 250 1100 50 6
+P 2100 1100 2300 1100 1
+{
+T 2150 1150 5 8 1 1 0 0
+pin11=11
+T 1850 1100 9 10 1 1 0 6
+pinlabel=/OUT C
+}
+P 200 1100 0 1100 1
+{
+T 200 1150 5 8 1 1 0 6
+pin12=12
+T 400 1100 9 10 1 1 0 0
+pinlabel=/ENB
+}
+T 1400 3700 5 10 0 0 0 0
+device=ds26c31
+T 300 3500 9 10 1 0 0 0
+DS26C31
