@@ -1,0 +1,11 @@
+datanationaldir = @gedadatadir@/sym/national
+
+datanational_DATA = @datanational@
+
+EXTRA_DIST = $(datanational_DATA)
+
+MOSTLYCLEANFILES = gschem.log *~
+CLEANFILES = gschem.log *~
+DISTCLEANFILES = gschem.log *~
+MAINTAINERCLEANFILES = gschem.log *~
+
