@@ -35,6 +35,7 @@
 (component-library "@symdir@/memory")
 (component-library "@symdir@/micro")
 (component-library "@symdir@/maxim")
+(component-library "@symdir@/national")
 (component-library "@symdir@/radio")
 (component-library "@symdir@/tube")
 (component-library "@symdir@/connector")
@@ -69,6 +70,7 @@
 (source-library "@symdir@/micro")
 (source-library "@symdir@/linear")
 (source-library "@symdir@/maxim")
+(source-library "@symdir@/national")
 (source-library "@symdir@/misc")
 (source-library "@symdir@/radio")
 (source-library "@symdir@/tube")
